--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,3 +78,33 @@
     font-weight: 600;
     margin-bottom: 10px;
 }
+
+.left-menu {
+    padding: 0;
+    list-style: none;
+    min-height: 84vh;
+}
+
+.left-menu h5 {
+    color: darkgrey;
+}
+
+.left-menu a {
+    display: block;
+    text-decoration: none;
+    padding: 10px 20px;
+    color: #555;
+}
+
+.left-menu a:hover {
+    background: #0d6efd;
+    color: #fff;
+    transition: all 0.1s linear;
+}
+
+li.section {
+    padding: 10px 20px;
+    color: #000;
+    font-weight: 700;
+    border-bottom: 1px solid #e2e2e2;
+}
